# Snowgenie

./: .gitignore  App.py  LLM_server.py  README.md  SnowMCP_initialize.py  Snow_MCP_server.py  client.py  constants.py  db_schema_cache.json  pyproject.toml  reaseach.txt  requirements.txt  test.py  write_detector.py
.streamlit/: config.toml
