[project]
name = "snowgenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastembed>=0.7.0",
    "fastmcp>=2.3.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.5",
    "langchain-ollama>=0.3.3",
    "mcp-use==1.2.9",
    "mcp[cli]>=1.8.0",
    "ollama>=0.4.8",
    "pyarrow==18.1.0",
    "snowflake>=1.4.0",
    "sqlparse>=0.5.3",
    "sseclient-py>=1.8.0",
    "streamlit>=1.45.0",
]
